# orfeo

./: AUTHORS  CMakeLists.txt  ChangeLog  FAQ  Makefile.am  Makefile.in  README  TODO  TODO.txt  aclocal.m4  config.h.in  configure  configure.ac  configure.in  orpheus.1  orpheus.motor  orpheus.spec
cmake/: README.txt
debian/: changelog  control  copyright  rules  watch
debian/patches/: add-more-instructions.diff  ftbfs_amd64_cast.diff  gcc-4.3-include-fix  improve-manpage.diff  patch.orpheus-1.5.add-start-stop-clear-1.diff  patch.orpheus-1.5.fix-nexttrack-prevtrack-1.diff  patch.orpheus-1.5.fix-play-n-1.diff  regenerate-configure-scripts.diff  series
kkconsui-0.1/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac
kkconsui-0.1/include/: Makefile.in  texteditor.h
kkconsui-0.1/src/: Makefile.am  Makefile.in  texteditor.cc
kkstrtext-0.1/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  kkstrtext.cc  kkstrtext.h
po/: CMakeLists.txt  ChangeLog  POTFILES.in  ca.gmo  ca.po  orfeo.pot  ru.gmo  ru.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  cdtrack.cc  cdtrack.h  flactrack.cc  flactrack.h  main.cc  mixerctl.cc  mixerctl.h  mp3track.cc  mp3track.h  oggtrack.cc  oggtrack.h  orpheusconf.cc  orpheusconf.h  playlist.cc  playlist.h  streamtrack.cc  streamtrack.h  uitext.cc  uitext.h  vcedit.c  vcedit.h
src/abstract/: Makefile.am  Makefile.in  track.h  userinterface.h
