AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/../kkstrtext -I$(top_srcdir)/../kkstrtext-0.1 --Wwrite-strings  
AM_CFLAGS = -Wunused-result -fpermissive
noinst_LIBRARIES = libkkconsui.a
EXTRA_DIST = config.guess config.sub
SUBDIRS = include src
libkkconsui_a_SOURCES = 
libkkconsui_a_LIBADD =  src/treeview.o src/colorschemer.o src/textinputline.o src/fileselector.o src/textwindow.o src/texteditor.o src/dialogbox.o src/screenarea.o src/textbrowser.o src/abstractui.o src/horizontalbar.o src/linkedlist.o src/cmenus.o src/conscommon.o
AUTOMAKE_OPTIONS = foreign
