AC_INIT([kkstrtext], [0.1])
AC_CONFIG_SRCDIR([kkstrtext.cc])
AM_INIT_AUTOMAKE


AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_CHECK_HEADERS(_G_config.h)
AC_LANG_CPLUSPLUS

AM_ICONV_LINK
AM_ICONV

CFLAGS="$CFLAGS $INCICONV"
CXXFLAGS="$CXXFLAGS $INCICONV"

LIBS="$LIBS $LIBICONV"

AC_OUTPUT(Makefile)
